# pyrig-executables

./: README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: deploy.yml  release.yml
docs/: api.md  index.md
src/pyrig_executables/: __init__.py  main.py
src/pyrig_executables/rig/: __init__.py
src/pyrig_executables/rig/cli/: __init__.py  subcommands.py
src/pyrig_executables/rig/cli/commands/: __init__.py  run.py
src/pyrig_executables/rig/configs/: __init__.py  icon.py  main.py
src/pyrig_executables/rig/configs/remote_version_control/workflows/: release.py
src/pyrig_executables/rig/configs/version_control/: __init__.py
src/pyrig_executables/rig/configs/version_control/remote/: __init__.py
src/pyrig_executables/rig/configs/version_control/remote/workflows/: __init__.py  release.py
src/pyrig_executables/rig/resources/: __init__.py
src/pyrig_executables/rig/tools/: __init__.py  executable_builder.py  pyrigger.py
src/pyrig_executables/rig/tools/executables/: builder.py
tests/: test_zero.py
tests/test_pyrig_executables/: test_main.py
tests/test_pyrig_executables/test_rig/test_cli/: test_subcommands.py
tests/test_pyrig_executables/test_rig/test_cli/test_commands/: test_run.py
tests/test_pyrig_executables/test_rig/test_configs/: test_icon.py  test_main.py
tests/test_pyrig_executables/test_rig/test_configs/test_remote_version_control/test_workflows/: test_release.py
tests/test_pyrig_executables/test_rig/test_configs/test_version_control/test_remote/test_workflows/: test_release.py
tests/test_pyrig_executables/test_rig/test_tools/: test_executable_builder.py  test_pyrigger.py
tests/test_pyrig_executables/test_rig/test_tools/test_executables/: test_builder.py
